<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Fragments.HOME_FRAGMENT.backhome">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:itemIconTint="@color/TextColor"
        app:itemTextColor="@color/TextColor"
        app:menu="@menu/settingnav" />

    <ScrollView
        android:id="@+id/fragment_back_home_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <LinearLayout
            android:id="@+id/fragment_back_home_layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Popular_new_releases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="Popular new releases"
                android:textColor="@color/TextColor"
                android:textSize="24dp"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/Popularalbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="Popular album"
                android:textColor="@color/TextColor"
                android:textSize="24dp"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclealbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Popular_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="Popular artist"
                android:textColor="@color/TextColor"
                android:textSize="24dp"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleartist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Popular_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:text="Popular playlist"
                android:textColor="@color/TextColor"
                android:textSize="24dp"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleplaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>