<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/library"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_premium"
        android:icon="@drawable/ic_premium1_foreground"
        android:title="@string/title_premium" />
</menu>