...
                                android:scaleType="centerCrop"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:src = "@drawable/default_image"
                                android:layout_marginBottom="20dp"/>
                            <TextView
                                android:id="@+id/playlist_name_middle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/background_light"
...
                                android:textSize="14dp"
                                android:textColor="@android:color/darker_gray"
                                android:text="BY SPOTIFY"
                                android:textAllCaps="true"
                                android:gravity="center"/>
                            <Button
                                android:id="@+id/shuffle_play_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_button"
                                android:text="shuffle play"
                                android:paddingLeft="40dp"
                                android:paddingRight="40dp"
...
