<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--
        Menu item's that displayed on Toolbar.
    -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="settings"
        android:icon="@drawable/settings_button_states"
        app:showAsAction="always" />

</menu>