<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_album_library_layout1"
    android:background="@color/bgBottomNavigation"
    tools:context=".Fragments.LIBRARY_FRAGMENT.Album_library_fragment.Album_Library">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textlibrary"
        />
    <ScrollView
        android:id="@+id/fragment_album_library_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <LinearLayout
            android:id="@+id/fragment_album_library_layout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSavedAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>


</FrameLayout>